--- a/pom.xml
+++ b/pom.xml
@@ -67,28 +67,44 @@
 	    <version>4.13</version>
 	    <scope>test</scope>
 	</dependency>
+	<!-- 
+	<dependency>
+    	<groupId>com.ibm.icu</groupId>
+    	<artifactId>icu4j</artifactId>
+    	<version>69.1</version> 
+	</dependency>
+	 -->
     
     <!--  ================== GOOGLE API ================== -->
     <!-- https://mvnrepository.com/artifact/com.google.api-client/google-api-client -->
 	<dependency>
 	    <groupId>com.google.api-client</groupId>
 	    <artifactId>google-api-client</artifactId>
-	    <version>1.30.8</version>
+	    <version>2.0.0</version>
 	</dependency>
+	
+	<dependency>
+    	<groupId>com.google.oauth-client</groupId>
+    	<artifactId>google-oauth-client-jetty</artifactId>
+    	<version>1.34.1</version> 
+	</dependency>
+    
+        <!-- https://mvnrepository.com/artifact/com.google.apis/google-api-services-sheets -->
+	<dependency>
+	    <groupId>com.google.apis</groupId>
+	    <artifactId>google-api-services-sheets</artifactId>
+	    <version>v4-rev20220927-2.0.0</version>
+	</dependency>
+    
     
     <!-- https://mvnrepository.com/artifact/com.google.oauth-client/google-oauth-client -->
 	<dependency>
 	    <groupId>com.google.oauth-client</groupId>
 	    <artifactId>google-oauth-client</artifactId>
-	    <version>1.30.4</version>
+	    <version>1.34.1</version>
 	</dependency>
 	    
-	    <!-- https://mvnrepository.com/artifact/com.google.apis/google-api-services-sheets -->
-	<dependency>
-	    <groupId>com.google.apis</groupId>
-	    <artifactId>google-api-services-sheets</artifactId>
-	    <version>v4-rev606-1.25.0</version>
-	</dependency>
+	
 	
 	<!-- https://mvnrepository.com/artifact/com.google.api-client/google-api-client-extensions -->
 	<!-- 
@@ -105,11 +121,7 @@
 	    <version>1.13.0-beta</version>
 	</dependency>
 	
-	<dependency>
-    	<groupId>com.google.oauth-client</groupId>
-    	<artifactId>google-oauth-client-jetty</artifactId>
-    	<version>1.26.0</version> 
-	</dependency>
+
 	                                    
 	                                    
 		     
@@ -117,7 +129,10 @@
     <dependency>     
 	    <groupId>ricohoho.googleX</groupId>
 	    <artifactId>api-googleX</artifactId>
-	    <version>1.6.7</version>  
+	    <version>1.7.0</version>
+	    <!-- 
+	    <version>1.6.7</version>
+	     -->  
 	    	     
 	    <!--
 	    <scope>system</scope>  
