--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
  <properties>
     <tomcat.version>8.5.23</tomcat.version>
     <argLine>-source 7</argLine>
+	<maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
   
   
